--- a/index.html
+++ b/index.html
@@ -7,57 +7,19 @@
     </head>
     <body>
         <header>
-            <h1 class="nav-bar" id="brand-title">My Website</h1>
-            <nav class="nav-bar">
-                <ul class="nav-bar">
-                     <li class="nav-link">
-                        <a href="#">Home</a>
-                     </li>
-                     <li class="nav-link">
-                        <a href="#">About</a>
-                     </li>
-                     <li class="nav-link">
-                        <a href="#">Contact</a>
-                     </li>
-                </ul>
-            </nav>
+            <h1 class="nav-bar" id="brand-title">J. Hernandez</h1>
+            <div class="dropdown">
+                <button class="dropbtn">▽</button>
+                <div class="dropdown-content">
+                  <a href="http://127.0.0.1:5500/index.html?#">Home</a>
+                  <a href="http://127.0.0.1:5500/index2.html">About</a>
+                  <a href="http://127.0.0.1:5500/index3.html#">Contact</a>
+                </div>
+              </div> 
         </header>
-        <main>
-            <article>
-                <img src="image.png" id="profile-picture" alt="My Portfolio Picture">
-                <h2> About Me</h2>
-                <P>Welcome To My Website</P>
-                <p>
-                    Hey There! I'm your Coding Sensei from Coding Temple! My mission 
-                    is to help you become a coding master in HTML, CSS, and Python. 
-                    Whether you're just starting out or looking to enhance your skills, 
-                    I'm here to breakdown tricky concepts and make coding a fun journey.
-                    Let's dive in together and unlock the world of programming magic!
-                </p>
-            </article>
-            <article>
-                <h2> Contact Me</h2>
-                <form>
-                    <div çlass="form-label">
-                        <label for="title-field">Title</label>
-                    </div>
-                    <div> 
-                        <input id="title-field" type="text" placeholder="Title">
-                    </div>
-                    <div çlass="form-label">
-                        <label for="message-field">Message</label>
-                    </div>
-                    <div>
-                        <textarea id="message-field" type="text" placeholder="Message"></textarea>
-                    </div>
-                    <button>Submit</button>
-                </form>
-            </article>
-        </main>
         <footer>
-            <p>&copy; 2023 My Website. All rights reserved.</p>
-            <p>Contact: info@example.com</p>
-            <a href="https://codingtemple.com">Start Your Next Career!</a>
+            <p>&copy; 2023 J. Hernandez. All rights reserved.</p>
+            <p>Contact: jay.hernandez1@comcast.net</p>
         </footer>    
     </body>
 </html>  
